# aulamat

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER_PROMPT.md  PROJECT_PLAN.md  README.md  compose.yml  pyproject.toml
deploy/: .gitignore  README.md  inventory.ini  playbook.yml  vars.example.yml
deploy/templates/: compose.yml.j2  env.j2
src/aula_project/: __init__.py  auth.py  cli.py  client.py  config.py  message_cache.py  models.py  normalize.py  notifications.py  openai_review.py  scan_state.py  scheduled_review.py  service.py  summary_server.py  triage.py
tests/: test_auth_and_triage.py  test_cli.py  test_config.py  test_message_cache.py  test_messages.py  test_normalize.py  test_notifications.py  test_scheduled_review.py  test_service_and_server.py
tests/fixtures/: auth_cache.json  message_threads.json  profile.json  thread_messages_live_style.json  thread_messages_thread-1.json
